--- a/Html/index.html
+++ b/Html/index.html
@@ -4,37 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Document</title>
+    <title>HelloWorld</title>
 </head>
 <body>
-    <div class="scene">
-        <div class="banner">
-         <div class="panel"></div>
-         <div class="panel"></div>
-         <div class="panel"></div>
-         <div class="panel"></div>
-         <div class="panel"></div>
-          <div class="panel"></div>
-          <div class="panel"></div>
-          <div class="panel"></div>
-          <div class="panel"></div>
-          <div class="panel"></div>
-          <div class="panel"></div>
-          <div class="panel"></div>
-          <div class="panel"></div>
-          <div class="panel"></div>
-          <div class="panel"></div>
-          <div class="panel"></div>
-          <div class="panel"></div>
-          <div class="panel"></div>
-          <div class="panel"></div>
-          <div class="panel"></div>
-          <div class="panel"></div>
-          <div class="panel"></div>
-          <div class="panel"></div>
-          <div class="panel"></div>
-        </div>
-        <div class="screen"></div>
-      </div>
+    <div style="color:red">HelloWorld</div>
 </body>
 </html>
